--- a/bios.html
+++ b/bios.html
@@ -208,7 +208,7 @@ class="lead">Jack Bernard</p>
 			         </script>
                                  <br>
       		        Title : Associate General Counsel/Adjunct Professor<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -391,7 +391,7 @@ class="lead">Katie Doyle</p>
 			         </script>
                                  <br>
       		        Title : Clinical Assistant Professor<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -522,7 +522,7 @@ class="lead">Lisa Green</p>
 			         </script>
                                  <br>
       		        Title : Coordinator<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -552,7 +552,7 @@ class="lead">Brittany Hamilton-Reed</p>
 			         </script>
                                  <br>
       		        Title : Hall Director<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -613,7 +613,7 @@ class="lead">Benjamin Howell</p>
 			         </script>
                                  <br>
       		        Title : User Experience and Accessibility Specialist<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
       			Department or Program : Library Information Technology
 Design and Discovery Department<br>
@@ -650,7 +650,7 @@ class="lead">Jacquline Jeffery</p>
 			         </script>
                                  <br>
       		        Title : Lead Design Manager Code Specialist<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -753,7 +753,7 @@ class="lead">Scott Larson</p>
 			         </script>
                                  <br>
       		        Title : Lecturer IV<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -884,7 +884,7 @@ class="lead">Pam McGuinty</p>
 			         </script>
                                  <br>
       		        Title : Financial / Business Analyst Sr<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -963,7 +963,7 @@ class="lead">Charlotte O'Connor</p>
 			         </script>
                                  <br>
       		        Title : Learning and Disability Specialist<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
       			Department or Program : Office of Medical Student Education<br>
       			School : Michigan Medicine<br>
       			Statement : When my youngest daughter was diagnosed with dyslexia, I became motivated to learn all l could to help her and others achieve equal access.
@@ -1045,7 +1045,7 @@ class="lead">Brianne Radke</p>
 			         </script>
                                  <br>
       		        Title : Academic Coach, Learning Services Coordinator<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -1065,7 +1065,7 @@ class="lead">Ellen Rambo</p>
 			         </script>
                                  <br>
       		        Title : Program Coordinator<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -1085,7 +1085,7 @@ class="lead">Mary Reilly</p>
 			         </script>
                                  <br>
       		        Title : Instructional Production Specialist<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -1219,7 +1219,7 @@ class="lead">anna ercoli schnitzer</p>
 			         </script>
                                  <br>
       		        Title : Informationist (Associate Librarian)<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -1299,7 +1299,7 @@ class="lead">Rachel Sprovtsoff</p>
 			         </script>
                                  <br>
       		        Title : Clinical Trunk Program Manager<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -1397,7 +1397,7 @@ class="lead">Bethany Welc</p>
 			         </script>
                                  <br>
       		        Title : School Of Social Work Grad Intern<br>
-					Website : No Website Provided
+					Website : No Website Provide <br>
 
 
 
@@ -1490,7 +1490,7 @@ class="lead">Philip Zazove</p>
 					Website : <a href="https://medicine.umich.edu/dept/family-medicine/philip-zazove-md">https://medicine.umich.edu/dept/family-medicine/philip-zazove-md</a><br>
 
 
-                        
+
 
       			Department or Program : Department Family Medicine<br>
       			School : Michigan Medicine<br>
