--- a/bios.html
+++ b/bios.html
@@ -98,7 +98,7 @@
       <div class="container">
             <h2>Biographies</h2>
             <p class="lead">
-            The biographies below provide full information for everyone included in the Directory, including contact information and a Motivation Motivation Statement, which describes how or why folks became involved in disability inclusion.
+            The biographies below provide full information for everyone included in the Directory, including contact information and a Motivation Statement, which describes how or why folks became involved in disability inclusion.
             </p>
           </div>
     <section id="A">
