--- a/index.html
+++ b/index.html
@@ -91,7 +91,12 @@
             Excel file exported</a> from Qualtrics. This Excel file has not gone
             under data processing or data norming.</p>
 
-		<div id="graphic"></div>
+            <div id="table">
+              <script
+	src="https://utbw529818.cloudtables.io/loader/40f9783e-368b-11ec-a8ce-236a236424ff/table/bs4"
+	data-token="64rhjXEGdos0Bc6zXLkIRlO5jmO20VIo"
+></script>
+    </div>
 		</div>
 		</div>
 		</div>
