--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
             <div id="table">
               <script
 	src="https://utbw529818.cloudtables.io/loader/40f9783e-368b-11ec-a8ce-236a236424ff/table/bs4"
-	data-token="zVy60yLdAAjtLBRg6alVe60dFFcz0Roi"
+  data-apiKey="FgHhU6YLQnM49Clc6xMoE5nF"
+  data-token="zVy60yLdAAjtLBRg6alVe60dFFcz0Roi"
+  data-clientId="mdi github website"
+  data-clientName="MDI Github IO"
 ></script>
     </div>
 		</div>
