--- a/index.html
+++ b/index.html
@@ -93,12 +93,11 @@
 
             <div id="table">
               <script
-	src="https://utbw529818.cloudtables.io/loader/40f9783e-368b-11ec-a8ce-236a236424ff/table/d"
-  data-apiKey="FgHhU6YLQnM49Clc6xMoE5nF"
-  data-clientId="mdi github website"
-  data-clientName="MDI Github IO"
+    src="https://mdi.cloudtables.io/loader/40f9783e-368b-11ec-a8ce-236a236424ff/table/d"
+    data-apiKey="FgHhU6YLQnM49Clc6xMoE5nF"
+    data-clientId="MDI Github IO"
 ></script>
-    </div>
+</div>
 		</div>
 		</div>
 		</div>
