--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <script
     src="https://mdi.cloudtables.io/loader/40f9783e-368b-11ec-a8ce-236a236424ff/table/d"
     data-apiKey="FgHhU6YLQnM49Clc6xMoE5nF"
-    data-clientId="MDI Github IO"
+    data-clientId="https://mapping-disability.github.io/"
 ></script>
 </div>
 		</div>
