--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap4.min.css" rel="stylesheet">
-    <link href="https://cdn.datatables.net/responsive/2.2.7/css/responsive.bootstrap4.min.css" rel="stylesheet">
+    <!--<link href="//cdn.datatables.net/1.10.23/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <link href="//cdn.datatables.net/responsive/2.2.7/css/responsive.bootstrap4.min.css" rel="stylesheet"> -->
 
 
     <!-- Custom styles for this template -->
@@ -142,19 +142,19 @@
     <!-- Plugin JavaScript -->
     <!--<script src="vendor/jquery-easing/jquery.easing.min.js"></script> -->
 
-	<!-- DATATABLES -->
-	<script type="text/javascript" src="//cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+	<!-- DATATABLES
+	<script type="text/javascript" src="//cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>-->
 
-	<!--BOOTSTRAP INTEGRATION JS -->
+	<!--BOOTSTRAP INTEGRATION JS
 	<script src="//cdn.datatables.net/1.10.23/js/dataTables.bootstrap4.min.js"></script>
   <script src="//cdn.datatables.net/responsive/2.2.7/js/dataTables.responsive.min.js"></script>
   <script src="//cdn.datatables.net/responsive/2.2.7/js/responsive.bootstrap4.min.js"></script>
-  <script scr="//cdn.datatables.net/fixedheader/3.1.8/js/dataTables.fixedHeader.min.js"></script>
+  <script scr="//cdn.datatables.net/fixedheader/3.1.8/js/dataTables.fixedHeader.min.js"></script>-->
 
 	<!-- TableTop -->
-	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.6.2/tabletop.min.js"></script>
+	<!--<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.6.2/tabletop.min.js"></script>
 
-    <script src="js/graphic.js" type="text/javascript"></script>
+    <script src="js/graphic.js" type="text/javascript"></script>-->
 
 
 
